--- a/2sem/icc2/atr5-icc2/Makefile
+++ b/2sem/icc2/atr5-icc2/Makefile
@@ -2,8 +2,7 @@ MAIN=main.c
 BINARY=atr
 
 all:
-	gcc -g $(MAIN) -o $(BINARY)
-	gcc -g main.c 
+	gcc -Wall -Werror -Wextra -g $(MAIN) -o $(BINARY)
 
 run:
 	./$(BINARY)
