feature(atr4-alg1): add sum function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,9 @@
     "vector": "c",
     "streambuf": "c",
     "functional": "c",
-    "tuple": "c"
+    "tuple": "c",
+    "lista.h": "c",
+    "item.h": "c"
   },
   "C_Cpp.errorSquiggles": "Enabled"
 }
