--- a/2sem/alg1/atr4-alg1/Makefile
+++ b/2sem/alg1/atr4-alg1/Makefile
@@ -2,7 +2,7 @@ ITEM = Item/Item.c
 MAIN = Main.c
 UTIL = Util/Util.c
 PILHA = Pilha/PilhaEncadeada.c
-LISTA = Lista/ListaSequencial.c
+LISTA = Lista/ListaEncadeada.c
 BINARY = main
 NAME = TAD
 
