feat(atr5): add binary tree

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,10 @@
     "tuple": "c",
     "lista.h": "c",
     "item.h": "c",
-    "util.h": "c"
+    "util.h": "c",
+    "initializer_list": "c",
+    "utility": "c",
+    "cliente.h": "c"
   },
   "C_Cpp.errorSquiggles": "Enabled"
 }
