--- a/2sem/alg1/atr6-alg1/1.in
+++ b/2sem/alg1/atr6-alg1/1.in
@@ -1,13 +1,8 @@
-10
-871.668.121-50;Guilherme Maria Cecília Carvalho;59;-29074.20
-341.379.656-92;Laura Carvalho;42;6075.64
-236.359.835-00;Isabella Matheus Henrique Teixeira;18;-14096.05
-680.999.712-13;Laura Isabella Gomes;31;5008.31
-905.709.543-20;Helena Laura Helena Oliveira;44;17379.97
-077.790.919-70;Maria Júlia Alice Carvalho;42;8766.66
-507.367.883-44;Heitor Eloa Oliveira;57;10982.96
-459.153.623-89;Lorena Maria Luiza Martins;42;7201.61
-152.910.808-09;Manuela Manuella Benício Silva;44;13382.96
-583.392.402-26;Sophia Nunes;21;3087.41
-B
-680.999.712-13
+5
+186.161.140-41;Heitor Rafael Fernandes;57;-5911.43
+834.772.252-87;Heitor Júlia Fernandes;82;-8666.55
+977.535.257-60;Alice Bernardo Carvalho;55;1520.47
+150.664.433-39;Pedro Mendes;38;-3435.54
+550.980.261-80;Pedro Henrique Arthur Davi Gomes;32;-4320.64
+R
+186.161.140-41
