feat(alg2): add ex 0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,8 @@
     "initializer_list": "c",
     "utility": "c",
     "cliente.h": "c",
-    "arvorebinaria.h": "c"
+    "arvorebinaria.h": "c",
+    "student.h": "c"
   },
   "C_Cpp.errorSquiggles": "Enabled"
 }
