feat(alg2): merge at3

--- a/3sem/alg2/atr3/Makefile
+++ b/3sem/alg2/atr3/Makefile
@@ -1,8 +1,8 @@
 MAIN = main.c
-SOURCES = Aluno.c Arquivo.c
+SOURCES = Aluno.c Arquivo.c Indice.c
 UTIL = Util.c
 BINARY = main
-NAME = ex0
+NAME = ex2
 
 all:
 	gcc -Wall -g $(UTIL) $(SOURCES) $(MAIN) -o $(BINARY)
