feat(alg2): save indexes

--- a/3sem/alg2/atr3/1.in
+++ b/3sem/alg2/atr3/1.in
@@ -1,1 +1,6 @@
 insert 1,Raymond,Adeline,Sistemas de informacao,2
+insert 2,Jeanne,Alice,Ciencia da computacao,6
+insert 3,Gregory,Alicia,Engenharia da computacao,0
+insert 4,Elizabeth,Alla,Sistemas de informacao,1
+insert 5,Carl,Alma,Ciencia da computacao,7
+exit
